Bug fix 3527810: Removing fragment in URL